fix spacing issues found on mobile

--- a/docs/_sass/base/_chapters.scss
+++ b/docs/_sass/base/_chapters.scss
@@ -58,6 +58,7 @@ a.Chapter {
   flex-direction: column;
   justify-content: space-between;
   margin: 0 $small-spacing;
+  margin-bottom: $small-spacing;
 
   @include media($min-desktop) {
     margin: 0;
