--- a/docs/_sass/base/_typography.scss
+++ b/docs/_sass/base/_typography.scss
@@ -55,7 +55,7 @@ h5, .h5, h6, .h6 {
 }
 
 p {
-  margin: 0;
+  margin: 0 0 $small-spacing;
   width: 100%;
 }
 
